--- a/fresh_tomatoes.html
+++ b/fresh_tomatoes.html
@@ -2,7 +2,6 @@
 <head>
     <meta charset="utf-8">
     <title>Fresh Tomatoes!</title>
-
     <!-- Bootstrap 3 -->
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap-theme.min.css">
@@ -104,28 +103,28 @@
     </div>
     <div class="container">
       
-<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="KYz2wyBy3kc" data-toggle="modal" data-target="#trailer">
-    <img src="https://en.wikipedia.org/wiki/File:Toy_Story.jpg" width="220" height="342">
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="wmiIUN-7qhE" data-toggle="modal" data-target="#trailer">
+    <img src="https://upload.wikimedia.org/wikipedia/en/1/13/Toy_Story.jpg" width="220" height="342">
     <h2>toy story</h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="5PSNL1qE6VY" data-toggle="modal" data-target="#trailer">
-    <img src="https://en.wikipedia.org/wiki/File:Avatar-Teaser-Poster.jpg" width="220" height="342">
+    <img src="https://upload.wikimedia.org/wikipedia/en/b/b0/Avatar-Teaser-Poster.jpg" width="220" height="342">
     <h2>Avatar</h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="HUJZjUaNzgw" data-toggle="modal" data-target="#trailer">
-    <img src="http://www.impawards.com/2009/taken.html" width="220" height="342">
-    <h2>taken_3</h2>
+    <img src="https://upload.wikimedia.org/wikipedia/en/6/6f/Taken_3_poster.jpg" width="220" height="342">
+    <h2>Taken 3</h2>
 </div>
 
-<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="xbb1QzQ9P1w" data-toggle="modal" data-target="#trailer">
-    <img src="https://en.wikipedia.org/wiki/File:12_angry_men.jpg" width="220" height="342">
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="J61XJhYiUpg" data-toggle="modal" data-target="#trailer">
+    <img src="https://upload.wikimedia.org/wikipedia/en/9/91/12_angry_men.jpg" width="220" height="342">
     <h2>twelve angry men</h2>
 </div>
 
-<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="GPD0ezmvdNE" data-toggle="modal" data-target="#trailer">
-    <img src="https://en.wikipedia.org/wiki/Gotti_(film)#/media/File:Gotti_(1996_film).jpg" width="220" height="342">
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="Y3V5uy5Qo94" data-toggle="modal" data-target="#trailer">
+    <img src="https://upload.wikimedia.org/wikipedia/en/7/79/Gotti_movie_poster.jpg" width="220" height="342">
     <h2>Gotti</h2>
 </div>
 
